Correction titre H1 page do search en dark mode

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1156,6 +1156,14 @@ h3 {
     margin-right: 4px;
 }
 
+.dark-h1rec {
+    font-size: 36px;
+    color: #fff;
+    font-weight: 800;
+    line-height: 36px;
+    padding-top: 30px;
+}
+
 /*FOOTER DARK MODE*/
 
 .dark-footer-rtbf {
